adding working files

--- a/public/index.html
+++ b/public/index.html
@@ -32,83 +32,23 @@
                             <li class="active" style="white-space: nowrap;"><a href="index.html">Homepage</a></li>
                             <li style="white-space: nowrap;"><a href="login.html">Login</a></li>
                             <li style="white-space: nowrap;"><a href="signup.html">Sign-up</a></li>
-                            <li style="white-space: nowrap;"><a href="https://github.com/ianhooper613/Project-2">Contact Us</a></li>
+                            <li style="white-space: nowrap;"><a href="https://www.github.com/ianhooper613/Project-2">Contact Us</a></li>
                         </ul>
                     </nav>
                 </div>
 
             <!-- Banner -->
                 <div id="banner" class="container">
-        <header class="major">
-          <h2>Products</h2>
-        </header>    
+                    <section>
+                        <p href="#"><img src="images/banner.png" alt=""></p>
+                        <a href="indextest.html" class="button medium">Start Your Local Journey</a>
+                    </section>
                 </div>
 
-            <!-- Extra -->
-                <div id="extra">
-        <div class="container">
-          <h2 style="color:white;font-size:30px;"> Fruits and Vegetables</h2><br>
-            <div class="row no-collapse-1">
-             <section class="3u"> <a href="#" class="image featured"><img src="images/vegetable_celery.PNG" alt=""></a>
-              <div class="box">
-              <h2>Celery</h2>
-              <h3>3.60$</h3>
-              <a href="#" class="button" id="celery">Checkout</a> </div>
-              </section>
-              <section class="3u"> <a href="#" class="image featured"><img src="images/vegetable_zucchini.png" alt=""></a>
-              <div class="box">
-              <h2>Zucchini</h2>
-              <h3>4.00$</h3>
-              <a href="#" class="button" id="zucchini">Checkout</a> </div>
-              </section>
-              <section class="3u"> <a href="#" class="image featured"><img src="images/vegetable_tomato.png" alt=""></a>
-              <div class="box">
-              <h2>Tomatoes</h2>
-              <h3>2.00$</h3>
-              <a href="#" class="button" id="tomato">Checkout</a> </div>
-              </section>
-              <section class="3u"> <a href="#" class="image featured"><img src="images/vegetable_cabage.PNG" alt=""></a>
-              <div class="box">
-              <h2>Carrots</h2>
-              <h3>1.75$</h3>
-              <a href="#" class="button" id="carrot">Checkout</a> </div>
-              </section>
-            </div>
-            <div class="row no-collapse-1">
-                <section class="3u"> <a href="#" class="image featured"><img src="images/vegetable_celery.PNG" alt=""></a>
-                 <div class="box">
-                 <h2>Celery</h2>
-                 <h3>3.60$</h3>
-                 <a href="#" class="button" id="celery">Checkout</a> </div>
-                 </section>
-                 <section class="3u"> <a href="#" class="image featured"><img src="images/vegetable_zucchini.png" alt=""></a>
-                 <div class="box">
-                 <h2>Zucchini</h2>
-                 <h3>4.00$</h3>
-                 <a href="#" class="button" id="zucchini">Checkout</a> </div>
-                 </section>
-                 <section class="3u"> <a href="#" class="image featured"><img src="images/vegetable_tomato.png" alt=""></a>
-                 <div class="box">
-                 <h2>Tomatoes</h2>
-                 <h3>2.00$</h3>
-                 <a href="#" class="button" id="tomato">Checkout</a> </div>
-                 </section>
-                 <section class="3u"> <a href="#" class="image featured"><img src="images/vegetable_cabage.PNG" alt=""></a>
-                 <div class="box">
-                 <h2>Carrots</h2>
-                 <h3>1.75$</h3>
-                 <a href="#" class="button" id="carrot">Checkout</a> </div>
-                 </section>
-               </div>
+            
 
-
-
-
-
-
-        </div>       
-     </div>
-    </div>
+            <!-- Main -->
+</div>
 
 <!-- Footer -->
 
@@ -116,7 +56,7 @@
     <div id="copyright">
         <div class="container">
             <div class="copyright">
-                <p>Licence MIT  - Local Farmer Grocery Shop</p>
+                <p>The Three Bald Guys Inc.</p>
                 <ul class="icons">
                     <li><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
                     <li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
