adding final files

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
             <!-- Header -->
                 <div id="header" class="skel-panels-fixed">
                     <div id="logo">
-                        <h1><a href="index.html">Local Farmer Grocery Shop</a></h1>
+                        <h1><a href="index.html">Local  Farmer  Shopping  Application</a></h1>
                         <span class="tag"></span>
                     </div>
                     <nav id="nav">
@@ -41,7 +41,7 @@
                 <div id="banner" class="container">
                     <section>
                         <p href="#"><img src="images/banner.png" alt=""></p>
-                        <a href="indextest.html" class="button medium">Start Your Local Journey</a>
+                        <a href="farmers.html" class="button medium">Start Your Local Journey</a>
                     </section>
                 </div>
 
